udev 154
========

udev 153
========
Fix broken firmware loader search path.

udev 152
========
Bugfixes.

"udevadm trigger" defaults to "change" events now instead of "add"
events. The "udev boot script" might need to add "--action=add" to
the trigger command if not already there, in case the initial coldplug
events are expected as "add" events.

The option "all_partitons" was removed from udev. This should not be
needed for usual hardware. Udev can not safely make assumptions
about non-existing partition major/minor numbers, and therefore no
longer provide this unreliable and unsafe option.

The option "ignore_remove" was removed from udev. With devtmpfs
udev passed control over device nodes to the kernel. This option
should not be needed, or can not work as advertised. Neither
udev nor the kernel will remove device nodes which are copied from
the /lib/udev/devices/ directory.

All "add|change" matches are replaced by "!remove" in the rules and
in the udev logic. All types of events will update possible symlinks
and permissions, only "remove" is handled special now.

The modem modeswitch extra was removed and the external usb_modeswitch
program should be used instead.

New and fixed keymaps.

udev 151
========
Bugfixes.

udev 150
========
Bugfixes.

Kernels with SYSFS_DEPRECATED=y are not supported since a while. Many users
depend on the current sysfs layout and the information not available in the
deprecated layout. All remaining support for the deprecated sysfs layout is
removed now.

udev 149
========
Fix for a possible endless loop in the new input_id program.

udev 148
========
Bugfixes.

The option "ignore_device" does no longer exist. There is no way to
ignore an event, as libudev events can not be suppressed by rules.
It only prevented RUN keys from being executed, which results in an
inconsistent behavior in current setups.

BUS=, SYSFS{}=, ID= are long deprecated and should be SUBSYSTEM(S)=,