@@ -1266,17 +1266,6 @@ KERNEL=="ttyACM[0-9]*", SYMLINK="three"
 EOF
 	},
 	{
-		desc		=> "test empty NAME",
-		subsys		=> "tty",
-		devpath		=> "/devices/pci0000:00/0000:00:1d.7/usb5/5-2/5-2:1.0/tty/ttyACM0",
-		exp_name	=> "<none>",
-		not_exp_name	=> "ttyACM0",
-		exp_add_error	=> "yes",
-		rules		=> <<EOF
-KERNEL=="ttyACM[0-9]*", NAME=""
-EOF
-	},
-	{
 		desc		=> "test empty SYMLINK+ (empty override)",
 		subsys		=> "tty",
 		devpath		=> "/devices/pci0000:00/0000:00:1d.7/usb5/5-2/5-2:1.0/tty/ttyACM0",
